%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: OGRE_WARLORD_CONTROLLER
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Direction
    m_Type: 1
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: CastThrow
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Charging
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Casting
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: ChargeThrow
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MakeTransition
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsDamaged
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Stun
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Revert
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Walk
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Death
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Idle
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 1
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: Speed
  m_BlendParameterY: Speed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110292953}
  m_TransitionDuration: .0450411178
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Casting
    m_EventTreshold: 0
    m_ExitTime: .908233941
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110102437
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251349}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .15625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: ChargeThrow
    m_EventTreshold: 0
    m_ExitTime: .84375
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .84375
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110103030
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110214187}
  m_TransitionDuration: .260416687
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .739583313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110110765
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110273828}
  m_DstState: {fileID: 110201246}
  m_TransitionDuration: .117581517
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Charging
    m_EventTreshold: 0
    m_ExitTime: .913646519
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110113034
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110221626}
  m_DstState: {fileID: 110292251}
  m_TransitionDuration: .230398238
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ChargeThrow
    m_EventTreshold: 0
    m_ExitTime: .769601762
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110130501
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110278713}
  m_TransitionDuration: .15625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .84375
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133556
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110213157}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110134553
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256993}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .280198753
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .791666687
  - m_ConditionMode: 5
    m_ConditionEvent: Stun
    m_EventTreshold: 0
    m_ExitTime: .719801247
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137377
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292953}
  m_DstState: {fileID: 110273828}
  m_TransitionDuration: .109896861
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: ChargeThrow
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .931154013
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110138760
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110201246}
  m_DstState: {fileID: 110221626}
  m_TransitionDuration: .134019032
  m_TransitionOffset: .00461824425
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: ChargeThrow
    m_EventTreshold: 0
    m_ExitTime: .909446597
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .909446597
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110148938
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110273828}
  m_DstState: {fileID: 110251349}
  m_TransitionDuration: .148809522
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: CastThrow
    m_EventTreshold: 0
    m_ExitTime: .851190448
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110149275
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110256993}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsDamaged
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110151620
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110218452}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .208333328
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .791666687
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157230
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110256993}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Revert
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110158699
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256993}
  m_DstState: {fileID: 110218452}
  m_TransitionDuration: .208333328
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Stun
    m_EventTreshold: 0
    m_ExitTime: .791666687
  - m_ConditionMode: 1
    m_ConditionEvent: Stun
    m_EventTreshold: 0
    m_ExitTime: .791666687
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110165394
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292251}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0992063507
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: ChargeThrow
    m_EventTreshold: 0
    m_ExitTime: .900793672
  - m_ConditionMode: 1
    m_ConditionEvent: MakeTransition
    m_EventTreshold: 0
    m_ExitTime: .900793672
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110183516
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278713}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .240384623
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .759615362
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110183591
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110214187}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FocusLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ed1b43379c9d0054188b508018586583, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 240, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110201246
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CastToCharge
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0927df2aefc2843d4919cf6002e1b0e7, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 360, y: -156, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110213157
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: DeathState
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 288233bec367a264eabd34c1608cabe9, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 432, y: 276, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110214187
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 5706316f2168d1142bfecb37abf2321c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 96, y: 180, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110218452
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Wizard_09_Stun
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: fdae6a0a4e29c52449a8e5596a5b9ab6, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 540, y: 156, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110220959
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 02_FocusToCasting
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: a8022d3c3388b4040a8a318075936591, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 636, y: 144, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110221626
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ChargingLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 77bd5850825b84c18a9a68d43e46a6d5, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 552, y: -84, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110251349
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CastThrow
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 705b58628b2402848bcc7835da936e02, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -12, y: -60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110256993
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Wizard_08_Damage_Loop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4506680064917aa438b9435a8d11de73, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 516, y: 84, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110273828
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CastingLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 705b58628b2402848bcc7835da936e02, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 240, y: -72, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110278713
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8139254f653144b16b5c575c6e15accd, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 0, y: 60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292251
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ChargeThrow
  m_Speed: 2
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 48d5500b097254cf9962c78df59778a0, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 552, y: 0, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292953
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FocusToCast
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 705b58628b2402848bcc7835da936e02, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 240, y: 24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110214187}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110292953}
  - {fileID: 110273828}
  - {fileID: 110251349}
  - {fileID: 110201246}
  - {fileID: 110221626}
  - {fileID: 110292251}
  - {fileID: 110256993}
  - {fileID: 110218452}
  - {fileID: 110278713}
  - {fileID: 110213157}
  - {fileID: 110214187}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110149275}
      - {fileID: 110157230}
      - {fileID: 110133556}
    data:
      first: {fileID: 110214187}
      second:
      - {fileID: 110183591}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110130501}
      - {fileID: 110103030}
    data:
      first: {fileID: 110292953}
      second:
      - {fileID: 110137377}
    data:
      first: {fileID: 110273828}
      second:
      - {fileID: 110148938}
      - {fileID: 110110765}
    data:
      first: {fileID: 110251349}
      second:
      - {fileID: 110102437}
    data:
      first: {fileID: 110201246}
      second:
      - {fileID: 110138760}
    data:
      first: {fileID: 110221626}
      second:
      - {fileID: 110113034}
    data:
      first: {fileID: 110292251}
      second:
      - {fileID: 110165394}
    data:
      first: {fileID: 110256993}
      second:
      - {fileID: 110134553}
      - {fileID: 110158699}
    data:
      first: {fileID: 110218452}
      second:
      - {fileID: 110151620}
    data:
      first: {fileID: 110278713}
      second:
      - {fileID: 110183516}
    data:
      first: {fileID: 110213157}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 300, y: 216, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
